--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: volkansahin
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
+description: 'blog'
 url: 'volkansah.in'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
