--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
 title: volkansahin
 description: 'volkansahin blog'
-url: 'http://joshgerdes.com/jekyll-uno'
+url: 'http://volkansah.in'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  name: 'Volkan Sahin'
+  email: bm.volkansahin@gmail.com
+  twitter_username: volkansahin
+  facebook_username: bm.volkansahin
+  github_username:  volkansahin
+  linkedin_username:  volkansahin
 
 defaults:
   -
