--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: volkansahin
 description: 'volkansahin blog'
-url: 'http://volkansah.in/blog'
+url: 'http://volkansah.in'
 baseurl: '/blog/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
