--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: volkansahin
 description: 'volkansahin blog'
 url: 'http://volkansah.in/jekyll-uno'
-baseurl: '/blog/'
+baseurl: '/jekyll-uno/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
