--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: volkansahin
-description: 'volkansahin blog'
-url: 'http://volkansah.in/jekyll-uno'
-baseurl: '/jekyll-uno/'
+description: 'import this'
+url: 'http://volkansah.in/blog'
+baseurl: '/blog/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
