--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: volkansahin
+title: volkansahinn
 description: 'import this'
 url: 'http://volkansah.in/blog'
 baseurl: '/blog/'
