--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: volkansahin
-description: 'import this'
+description: ':('
 url: 'http://volkansah.in'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
