--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: '/blog/'
 author:
   name: 'Volkan Sahin'
   email: bm.volkansahin@gmail.com
-  twitter_username: volkansahin
+  twitter_username: volkansahinn
   facebook_username: bm.volkansahin
   github_username:  volkansahin
   linkedin_username:  volkansahin
