--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 # Site settings
-title: volkan
-description: 'import this'
+title: volkannnn
+description: 'import thisnnn'
 url: 'http://volkansah.in'
 baseurl: '/blog/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Volkan Sahin'
-  email: bm.volkansahin@gmail.com
-  twitter_username: volkansahinn
-  facebook_username: bm.volkansahin
-  github_username:  volkansahin
-  linkedin_username:  volkansahin
+  name: 'Volkan Sahinnnn'
+  email: bm.volkansahinnnn@gmail.com
+  twitter_username: volkansahinnnnn
+  facebook_username: bm.volkansahinnnn
+  github_username:  volkansahinnnn
+  linkedin_username:  volkansahinnn
 
 defaults:
   -
