--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: volkansahin
-description: 'blog'
+description: 'import this'
 url: 'volkansah.in'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
