--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl: '/'
 author:
   name: 'Volkan Şahin'
   email: bm.volkansahin@gmail.com
-  twitter_username: volkansahinnnnn
+  twitter_username: volkansahin
   facebook_username: bm.volkansahin
   github_username:  volkansahin
   linkedin_username:  volkansahin
